[package]
name = "rustsockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.4"
actix-web-actors = "4.0.0-beta.8"
actix-files = "0.5.0"

rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.14"
env_logger = "0.9.0"

