[package]
name = "rustsockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tungstenite = "0.18.0"


