[package]
name = "rustsockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3.27"
env_logger = "0.9.0"
log = "0.4.17"
futures = "0.3.27"


